[package]
name = "overlay"
description = "Overlay system for notifications"
version = "0.2.0"
edition = "2021"
authors = ["29th-Day"]
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/overlay"
publish = false

[lib]
name = "overlay"
crate-type = ["lib"]

[dependencies]
wut = { git = "https://github.com/rust-wiiu/wut", branch = "main" }
notifications = { git = "https://github.com/rust-wiiu/notifications", branch = "main" }
