[package]
name = "overlay"
description = "Overlay system for notifications"
version = "0.3.1"
edition = "2021"
authors = ["29th-Day"]
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/overlay"
publish = false

[lib]
name = "overlay"
crate-type = ["lib"]

[dependencies]
wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.3.1" }
notifications = { git = "https://github.com/rust-wiiu/notifications", tag = "v0.3.1" }
